styles/base.css
.grid-body{
    display: grid;
    grid-template-columns: auto;
    grid-template-rows:12fr;
    justify-content: normal;
    width: 100%;
    margin: 0;
    padding: 0;
}

header{
    display: grid;
    grid-template-columns: 200px 1fr;
    grid-template-rows: 2fr;
    grid-row:1/2;
    border-top: solid medium white;
    border-bottom: solid medium white;
    padding: 10px;
    justify-content: center;
    background: linear-gradient(rgb(44, 109, 199), rgb(5, 32, 84));
    
}
.text{
    text-align: center;
    font-family: 'IBM Plex Sans', sans-serif;
    color: white;
    text-decoration: none;



}
header h1{
    grid-row: auto;
    grid-column: 2;
    justify-self: center;
    align-self: center;
  
}

picture{
    grid-row: 1/2;
    grid-column: 1;
    width: 100%;
    height: auto;
}
.profile-img{

    width: 75%;
    height: auto;

}

.temple-name{
    padding: 2px;
    position: absolute;
    left: 30px;
    top: 460px;
    width: max-content;
    height: max-content;
    background-color: rgba(252, 251, 251, 0.442);
    border-radius: 15px ;
    border: 2px solid white;
    color: white;
    font-size:xx-small ;


    
}
nav{
    grid-row: 2;
    grid-column: 1/3;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 5fr;
    justify-items: center;
    /* gap: 30px;
    padding: 30px; */
    font-family: 'IBM Plex Sans', sans-serif;
    background-color: rgb(5, 32, 84);
    
}


ul a:hover{

    color: rgb(250, 198, 28);

}
main{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 0.4fr 50px 0.3fr;
    justify-items: center;
    padding: 10px;
    border-bottom: solid medium white;
    background-color: rgb(22, 98, 205);
    gap: 10px;
}

main h2{
    grid-row: 2;
    grid-column: 1/3;
    align-self: center;
}

.hero{
    grid-row: 1/2;
    grid-column: 1/3;
    width: 100%;
    height: auto;
}
.hero-img {
    grid-row: 1;
    grid-column: 1/3;
    width: 100%;
    height: auto;
    box-shadow: 10px 5px 5px rgb(2, 3, 89);
    align-self: center;
    justify-self: center;
}
.card1{
    grid-row: 3;
    grid-column: 1;
    width: 100%;
    height: auto;
    background:  #052054;
    box-shadow:2px 2px 2px rgb(2, 3, 89) ;
}

.card2{
    display:grid;
    grid-row: 3;
    grid-column: 2;
    justify-items: center;
    justify-content: space-around;
    align-items: center;
    gap: 0px;
    width: 100%;
    height: auto;
    background:  #052054;
    box-shadow:2px 2px 2px rgb(2, 3, 89) ;
    font-size: smaller;
}

footer{

    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 2fr;
    background-color: rgb(22, 98, 205);
    align-items: center;
}   

.current-year{
    grid-row: 1;
    grid-column: 1;
    width: 50%;
    padding: 0px;



}

#lastModified{
    grid-row: 2;
    grid-column: 1/4;
    width: 100%;
    padding: 0px;
    justify-self: center;
    text-align: center;
}

.mp4{

    width: 150px;
    height: auto;
    grid-row: 1;
    grid-column: 2/2;
    justify-self: center;
}
/* CSS FOR HAMBURGER BOTTON */
/* small view navigation */
#menu{
    background-color: rgb(5, 32, 84);
	font-size: 1.5rem;
    border: none;
    color: white;
    position: absolute;
    top: 20px;
    left: 440px;

}
#menu::before {
	content: "☰";
    
}

#menu.open::before {
	content: "🆇";
}
#menu:hover{
    color: rgb(250, 198, 28);
}

.navigation {
	display: flex;
	flex-direction: column;
	list-style: none;
}

.navigation a {
	display: none;
	padding: 1rem;
	text-align: center;
	text-decoration: none;
	color: #fff;
}
.navigation a:hover{
    color: rgb(250, 198, 28);    
}

.open a {
	display: block;
}

